--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1681,13 +1681,18 @@ html {
   width: 86vh;
 }
 
+.hero2 {
+  width: 86vh;
+}
+
 .desc {
-  margin-left: 40vh;  
+  width: 86vh;
+  margin-left: 5vh;
   font-size: 3em;
 }
 
 .desc p {
-  width: 35vh;
+  width: 30vh;
 }
 
 .thiscontainer {
@@ -1695,11 +1700,18 @@ html {
 }
 
 .this {
-  margin: 30vh -50vh;
+  font-size: 4em;
+  margin-top: 25vh;
+  margin-left: -60vh;
 }
 
 .this2 {
-  margin: 100vh -50vh;
+  font-size: 4em;
+  margin-top: 100vh;
+  margin-left: -60vh;}
+
+.herocontainer {
+  width: 86vh;
 }
 
 .herotrouser img {
@@ -1738,6 +1750,7 @@ html {
   font-size: 2.5em;
 }
 
+
 .formcontainerlogin {
   margin: 30vh 0;
 }
@@ -1766,21 +1779,28 @@ html {
   background-position: center;
   background-attachment: fixed;
   background-blend-mode: overlay;
-  width: 100%;
+  width: 86vh;
+}
+
+.form-label-group {
+  color: var(--black);
 }
 
 .formcontainer .row {
-  color: white;
-  line-height: 3;
-  position: absolute;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-content: center;
-  width: 400px;
-  height: 500px;
-  opacity: 0.8;
+  align-items: center;
+  color: var(--black);
+  line-height: 2.5;
+  font-size: 1.5em;
+  margin: 0;
+  padding-top: 85vh;
+  width: 85vh;
 }
+
+.form-group input {
+  width: 650px;
+}
+
 
 .button {
   font-size: 2em;
