--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1993,8 +1993,7 @@ textarea::placeholder {
   display: flex;
   justify-content: flex-end;
   position: fixed;
-  margin: 8vh 50vh;
-}
+  margin: 2vh 50vh;}
 
 .custom {
   position: absolute;
