--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2021,8 +2021,8 @@ textarea::placeholder {
 
 .trouser {
   width: 40em;
-  margin: 20vh 50px;
-}
+  margin-top: 20vh;
+  margin-left: 5vh;}
 
 .custom h2 {
   font-size: 3em;
