--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2004,7 +2004,7 @@ textarea::placeholder {
   top: 0;
   left: 0;
   bottom: 0;
-  overflow-x: scroll;
+  //overflow-x: scroll;
   border-left: 1px solid #777777;
   height: 110vh;  
   line-height: 1.5; 
