--- a/public/css/app.css
+++ b/public/css/app.css
@@ -66,7 +66,9 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
-  width: 176vh;
+  /*width: 176vh;*/
+  width: 50vh;
+  margin: 10vh 3vh 0;
   position: absolute;
 }
 
@@ -115,22 +117,19 @@ body {
 .desc {
   display: -webkit-box;
   display: flex;
-  -webkit-box-pack: end;
-          justify-content: flex-end;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
+  -webkit-box-pack: center;
+          justify-content: center;
   position: absolute;
   font-family: var(--sec-font);
   font-size: 2.5em;
   color: var(--main);
   text-transform: uppercase;
-  margin: 20vh 0;
+  margin: 10vh 0;
   width: 150vh;
 }
 
 .desc p {
-  width: 50vh;
+  width: 60vh;
 }
 
 .desc1 {
@@ -149,6 +148,26 @@ body {
   margin: -90vh 10vh;
   width: 60vh;
   height: 80vh;
+}
+
+.star {
+  visibility: hidden;
+}
+
+.fadeIn {
+  -webkit-animation: animat_show 0.9s;
+  animation: animat_show 0.9s;
+  visibility: visible !important;
+}
+
+@-webkit-keyframes animat_show {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .thiscontainer {
@@ -1298,15 +1317,8 @@ td {
 
 .bloghomepost {
   position: absolute;
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-          justify-content: space-evenly;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  width: 70vh;
-  margin: 30vh 0;
+  width: 50vh;
+  margin: 30vh 2vh 0;
 }
 
 .bloghomepost p {
@@ -1338,24 +1350,34 @@ td {
   -webkit-box-pack: space-evenly;
           justify-content: space-evenly;
   width: 100%;
-  margin: 30vh 0;
+  margin: 20vh 40vh 0;
 }
 
-.blogpost p {
-  color: white;
-  width: 40vh;
+.blogtextcontainer {
+  background-color: var(--nude);
+}
+
+.blogtext {
+  margin: -10vh 50vh 0;
+  line-height: 2;
+  color: var(--main);
+}
+
+.blogtext p {
+  width: 80vh;
 }
 
 .designername {
   position: absolute;
   font-family: "Racing Sans One", cursive;
-  color: #b38383;
-  font-size: 3em;
-  width: 40px;
+  color: var(--nude);
+  font-size: 5em;
+  width: 60px;
+  margin: 1vh -90vh 0;
 }
 
 .blogheroimage img {
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .blogpost img {
@@ -1782,7 +1804,9 @@ nav.main-menu li.active > a,
   /* ##### HOME ##### */
 
   .hero img {
-    width: 86vh;
+    /*width: 86vh;*/
+    width: 40vh;
+    margin: -40vh;
   }
 
   .hero2 {
@@ -2124,7 +2148,7 @@ nav.main-menu li.active > a,
     -webkit-box-pack: end;
             justify-content: flex-end;
     position: fixed;
-    margin: 8vh 50vh;
+    margin: 2vh 50vh;
   }
 
   .custom {
@@ -2138,9 +2162,8 @@ nav.main-menu li.active > a,
     top: 0;
     left: 0;
     bottom: 0;
-    overflow-x: scroll;
     border-left: 1px solid #777777;
-    height: 106vh;
+    height: 110vh;
     line-height: 1.5;
   }
 
@@ -2150,11 +2173,13 @@ nav.main-menu li.active > a,
 
   .order-trouser {
     width: 30vh;
+    height: 110vh;
   }
 
   .trouser {
     width: 40em;
-    margin: 20vh 50px;
+    margin-top: 20vh;
+    margin-left: 5vh;
   }
 
   .custom h2 {
