--- a/public/css/app.css
+++ b/public/css/app.css
@@ -150,10 +150,6 @@ body {
   height: 80vh;
 }
 
-.star {
-  visibility: hidden;
-}
-
 .fadeIn {
   -webkit-animation: animat_show 0.9s;
   animation: animat_show 0.9s;
@@ -1104,6 +1100,11 @@ button {
 
 .homecontainer h2 {
   padding: 100px;
+}
+
+.inner {
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
 }
 
 .home-inner {
